estrutura final do projeto, pronto para ser colocado em procucao

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+boto = "^2.49.0"
+3 = "^0.0.0"
+python-dotenv = "^1.0.1"
+boto3 = "^1.35.74"
 
 
 [build-system]
